# Barch

./: CMakeLists.txt
src/app/: CMakeLists.txt  files_processor.cpp  files_processor.h  main.cpp
src/app/qml/: Background.qml  Content.qml  DialogButton.qml  ErrorPopup.qml  FileDelegate.qml  MainWindow.qml
src/app/ui/: files_model.cpp  files_model.h  gui.cpp  gui.h
src/lib/: CMakeLists.txt  archive.cpp  archive.h  bitmap.h  byte_utils.cpp  byte_utils.h
